...

                  // Username
                  Padding(
                    padding:
                        const EdgeInsets.only(left: 20, top: 20, right: 20),
                    child: TextFormField(
                      key: const Key('usernameTest'),
                      autofocus: true,
                      validator: (value) {
                        if (value == null || value.isEmpty) {
                          return 'Username tidak boleh kosong';
                        }
                        if (value.toLowerCase() == 'anjing') {
...

                  // Email
                  Padding(
                    padding:
                        const EdgeInsets.only(left: 20, top: 15, right: 20),
                    child: TextFormField(
                      key: const Key('emailTest'),
                      validator: (value) {
                        if (value == null || value.isEmpty) {
                          return 'Email tidak boleh kosong';
                        }
                        if (!value.contains('@')) {
                          return 'Email harus menggunakan @';
                        }
                        if (isExist) {
                          return 'Email sudah digunakan';
                        }
                        return null;
                      },
...

                  // Password
                  Padding(
                    padding:
                        const EdgeInsets.only(left: 20, top: 15, right: 20),
                    child: TextFormField(
                      key: const Key('passwordTest'),
                      validator: (value) {
                        if (value == null || value.isEmpty) {
                          return "Password tidak boleh kosong";
                        }
                        if (value.length < 5) {
                          return 'Password minimal 5 karakter';
                        }
                        return null;
                      },
                      obscureText: passwordInvisible,
                      controller: passwordController,
                      decoration: InputDecoration(
...

                  // Tanggal Lahir
                  Padding(
                      padding:
                          const EdgeInsets.only(left: 20, top: 15, right: 20),
                      child: TextFormField(
                        key: const Key('tglLahirTest'),
                        // hide keyboard ketika input date ditap
                        keyboardType: TextInputType.none,
                        readOnly: true,
                        validator: (value) {
                          if (value == null || value.isEmpty) {
                            return "Tanggal Lahir tidak boleh kosong";
...

                  // Nomor Telepon
                  Padding(
                    padding:
                        const EdgeInsets.only(left: 20, top: 15, right: 20),
                    child: TextFormField(
                      key: const Key('noTelpTest'),
                      keyboardType: TextInputType.number,
                      inputFormatters: <TextInputFormatter>[
                        FilteringTextInputFormatter.digitsOnly,
                      ],
                      validator: (value) {
                        final RegExp regex = RegExp(r'^\0?[0-9]\d{1,14}$');
...
                      const SizedBox(height: 30.0),
                      const Text(
                        'Jenis Kelamin',
                        style: TextStyle(fontSize: 16.0),
                      ),
                      RadioListTile(
                        key: const Key('genderMaleTest'),
                        title: const Text('Laki-laki'),
                        value: 'Laki-laki',
                        groupValue: selectedGender,
                        onChanged: (value) {
                          setSelectedGender('Laki-laki');
                        },
...
                              const Color.fromARGB(255, 18, 18, 18),
                          foregroundColor: Colors.white,
                          shape: RoundedRectangleBorder(
                            borderRadius: BorderRadius.circular(15.0),
                          ),
                        ),
                        key: const Key('registerClick'),
                        onPressed: () {
                          // munculkan text validasi/error handling merah ketika radio button jenis kelamin kosong
                          setState(() {
                            if (selectedGender.isEmpty) {
                              _showErrorJenisKelamin = true;
                            } else {
...
                                      child: const Text('Batal'),
                                      onPressed: () {
                                        Navigator.of(context).pop();
                                      },
                                    ),
                                    TextButton(
                                      key: const Key('yesButton'),
                                      child: const Text('Ya'),
                                      onPressed: () async {
                                        showDialog(
                                          context: context,
                                          builder: (context) {
                                            return const Center(
...
                                        if (mounted) {
                                          Navigator.pop(context);
                                          ScaffoldMessenger.of(context)
                                              .showSnackBar(
                                            const SnackBar(
                                              key: Key(
                                                  'snackbar_register_berhasil'),
                                              content:
                                                  Text('Register Berhasil'),
                                            ),
                                          );
                                        }

...
