...
  EdgeDetectionScanner imgScanner = EdgeDetectionScanner();
  bool hasImageDokumen = false;

  bool isLoading = false;

  // data dropdown
  // final List<String> listDokter = ['dr. Natasha', 'dr. Willy', 'dr. John Doe'];
  List<Dokter> listDokter = [];
  String? dropdownValue;

  List<Map<String, dynamic>> userProfile = [];

  int? userId;
...
                                  fontSize: 16.sp,
                                  fontWeight: FontWeight.bold,
                                  color: cAccentColor,
                                ),
                              ),
                              DropdownMenu<int>(
                                key: const Key('dropdown_dokter'),
                                controller: dokterController,
                                initialSelection: selectedDokterId,
                                // widget.janjiPeriksa != null
                                //     ? widget.janjiPeriksa!.idDokter ?? 0
                                //     : listDokter[0].id,
                                onSelected: (int? value) {
...
                              padding:
                                  const EdgeInsets.symmetric(horizontal: 5),
                              child: SizedBox(
                                height: 29.sp,
                                width: 40.w,
                                child: ElevatedButton(
                                  key: const Key('btnSubmit'),
                                  style: ElevatedButton.styleFrom(
                                    foregroundColor: Colors.white,
                                    backgroundColor: cAccentColor,
                                    shape: RoundedRectangleBorder(
                                      borderRadius: BorderRadius.circular(15.0),
                                    ),
...

                                        // ignore: use_build_context_synchronously
                                        ScaffoldMessenger.of(context)
                                            .showSnackBar(
                                          const SnackBar(
                                            key: Key(
                                                'snackbar_edit_janji_berhasil'),
                                            content: Text(
                                                'Berhasil Edit Janji Periksa'),
                                          ),
                                        );
                                      } else {
                                        await addJanjiPeriksa();

                                        // ignore: use_build_context_synchronously
                                        ScaffoldMessenger.of(context)
                                            .showSnackBar(
                                          const SnackBar(
                                            key: Key(
                                                'snackbar_create_janji_berhasil'),
                                            content: Text(
                                                'Berhasil Tambah Janji Periksa'),
                                          ),
                                        );
                                      }

...
