...
                                  ),
                                ),
                              ).then(
                                (_) => refresh(),
                              );
                            },
                            child: const Text('Detail'),
                          ),
                          const SizedBox(
                            width: 10,
                          ),
                          ElevatedButton(
                            key: const Key('btnEdit'),
                            style: ElevatedButton.styleFrom(
                              foregroundColor: cAccentColor,
                              backgroundColor: Colors.white,
                            ),
                            onPressed: () async {
                              Navigator.push(
...
                            child: const Icon(FontAwesomeIcons.penToSquare),
                          ),
                          const SizedBox(
                            width: 10,
                          ),
                          ElevatedButton(
                            key: const Key('btnDelete'),
                            style: ElevatedButton.styleFrom(
                              foregroundColor: Colors.redAccent,
                              backgroundColor: Colors.white,
                            ),
                            onPressed: () async {
                              await deleteJanjiPeriksa(
                                  listJanjiPeriksa[index].id!);

                              // ignore: use_build_context_synchronously
                              ScaffoldMessenger.of(context).showSnackBar(
                                const SnackBar(
                                  key: Key(
                                      'snackbar_delete_janji_periksa_berhasil'),
                                  content:
                                      Text('Berhasil Delete Janji Periksa'),
                                ),
                              );
                            },
                            child: Icon(FontAwesomeIcons.trashCan),
...
