...
                              const Color.fromARGB(255, 18, 18, 18),
                          foregroundColor: Colors.white,
                          shape: RoundedRectangleBorder(
                            borderRadius: BorderRadius.circular(15.0),
                          ),
                        ),
                        key: const Key('button_login'),
                        //* Fungsi yang dijalankan saat tombol ditekan
                        onPressed: () async {
                          //* Cek statenya sudah valid atau belum valid

                          // widget.onLogin!(
                          //   usernameController.text,
...
                              }
                            } else {
                              showDialog(
                                context: context,
                                builder: (_) => AlertDialog(
                                  title: const Text(
                                      'Username atau password salah!'),
                                  //* isi alert dialog
                                  actions: <Widget>[
                                    TextButton(
                                      //* pushRegister(context) fungsi pada baris 118-124 untuk meminimalkan nested code
                                      onPressed: () => pushRegister(context),
                                      child: const Text('Register'),
...
                      ),
                    ),
                  ),

                  //* tombol ke halaman register
                  TextButton(
                    key: const Key('button_register_here'),
                    style: ButtonStyle(
                      overlayColor:
                          MaterialStateProperty.all(Colors.transparent),
                    ),
                    onPressed: () {
                      // Map<String, dynamic> formData = {};
...
